@@ -24,43 +24,66 @@ import java.text.DecimalFormat;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
+/**
+ * Service implementation for interacting with a MinIO S3-compatible object storage server.
+ * This service is activated only when the 'storage-minio' Spring profile is active.
+ * It handles all file operations, such as saving, loading, and deleting objects in a configured bucket.
+ */
 @Service
 @Profile("storage-minio")
 public class MinioStorageService implements IFileStorageService {
 
     private static final Logger log = LoggerFactory.getLogger(MinioStorageService.class);
     private final MinioClient minioClient;
+    private final String bucketName;
+    private final String minioPublicUrl;
 
-    @Value("${minio.bucket.name}")
-    private String bucketName;
-
+    /**
+     * Constructs the MinioStorageService with all necessary dependencies and configuration.
+     * This constructor is used by Spring's dependency injection mechanism.
+     *
+     * @param minioClient    The configured MinioClient bean for communicating with the MinIO server.
+     * @param bucketName     The name of the bucket to use, injected from the 'minio.bucket.name' property.
+     * @param minioPublicUrl The public-facing base URL for MinIO, injected from 'minio.public.url'.
+     *                       This is used for correcting pre-signed URLs if needed.
+     */
     @Autowired
-    public MinioStorageService(MinioClient minioClient) {
-        // The constructor should just accept dependencies.
+    public MinioStorageService(
+            MinioClient minioClient,
+            @Value("${minio.bucket.name}") String bucketName,
+            @Value("${minio.public.url}") String minioPublicUrl
+    ) {
         this.minioClient = minioClient;
+        this.bucketName = bucketName;
+        this.minioPublicUrl = minioPublicUrl;
     }
 
     /**
-     * PostConstruct method to validate dependencies and configuration after they have been injected.
-     * This is a safer pattern than putting validation logic in the constructor.
+     * Initializes the service after construction. It logs the configuration being used,
+     * confirming that the service is ready.
      */
     @PostConstruct
     public void init() {
-        if (minioClient == null) {
-            throw new IllegalStateException("MinioClient has not been injected correctly.");
-        }
-        if (bucketName == null || bucketName.isBlank()) {
-            throw new IllegalStateException("Bucket name ('minio.bucket.name') must be set in application properties.");
-        }
-        log.info("MINIO STORAGE: Service initialized for bucket '{}'", bucketName);
+        log.info("MINIO STORAGE: Service initialized for bucket '{}' with public URL '{}'", bucketName, minioPublicUrl);
     }
 
+    /**
+     * Saves a multipart file to a specified directory within the MinIO bucket.
+     * If the bucket does not exist, it will be created. The file is stored with a
+     * unique name generated via UUID to prevent collisions.
+     *
+     * @param file      The {@link MultipartFile} to be saved.
+     * @param directory The target directory (prefix) within the bucket (e.g., "cars", "selfies").
+     * @return The full object key (e.g., "cars/uuid.jpg") which can be used to retrieve or delete the file.
+     * @throws RuntimeException if the upload process fails.
+     */
     @Override
     public String save(MultipartFile file, String directory) {
         try {
             boolean found = minioClient.bucketExists(BucketExistsArgs.builder().bucket(bucketName).build());
             if (!found) {
                 minioClient.makeBucket(MakeBucketArgs.builder().bucket(bucketName).build());
+                log.info("MINIO STORAGE: Bucket '{}' created.", bucketName);
             }
 
             String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
@@ -81,6 +104,14 @@ public class MinioStorageService implements IFileStorageService {
         }
     }
 
+    /**
+     * Loads a file from MinIO as a Spring {@link Resource}.
+     * This is the primary method used by the `FileController` to stream file content to the client.
+     *
+     * @param key The unique key of the object to load (e.g., "cars/uuid.jpg").
+     * @return An {@link Optional} containing the {@link Resource} if the file exists, or an empty Optional otherwise.
+     * @throws RuntimeException for any MinIO errors other than the key not being found.
+     */
     @Override
     public Optional<Resource> loadAsResource(String key) {
         try {
@@ -92,12 +123,19 @@ public class MinioStorageService implements IFileStorageService {
             if ("NoSuchKey".equals(e.errorResponse().code())) {
                 return Optional.empty();
             }
-            throw new RuntimeException("MinIO error: " + e.getMessage(), e);
+            throw new RuntimeException("MinIO error loading file: " + e.getMessage(), e);
         } catch (Exception e) {
             throw new RuntimeException("Error loading file from MinIO", e);
         }
     }
 
+    /**
+     * Checks if a file with the given key exists in the MinIO bucket.
+     *
+     * @param key The unique key of the object to check.
+     * @return {@code true} if the file exists, {@code false} otherwise.
+     * @throws RuntimeException for unexpected errors during the check.
+     */
     @Override
     public boolean fileExists(String key) {
         try {
@@ -111,6 +149,13 @@ public class MinioStorageService implements IFileStorageService {
         }
     }
 
+    /**
+     * Deletes a file from the MinIO bucket based on its key.
+     * This operation is idempotent; if the file doesn't exist, it succeeds without error.
+     *
+     * @param key The unique key of the object to delete.
+     * @return {@code true} if the deletion was successful or the file didn't exist, {@code false} on error.
+     */
     @Override
     public boolean delete(String key) {
         try {
@@ -127,10 +172,25 @@ public class MinioStorageService implements IFileStorageService {
         }
     }
 
+    /**
+     * Generates a publicly accessible, pre-signed URL for a MinIO object.
+     * <p>
+     * <strong>ARCHITECTURAL NOTE:</strong> This method is NOT used in the primary application flow
+     * for serving images to users. We use a proxy (`FileController`) instead. This method is retained
+     * for potential administrative use or scenarios where direct S3 access is desired.
+     * It corrects the URL generated by MinIO (which might point to an internal Docker address)
+     * to use the public-facing URL.
+     * </p>
+     *
+     * @param key The unique key of the object.
+     * @return A browser-accessible {@link URL} for the object.
+     * @throws RuntimeException if the URL generation or correction fails.
+     */
     @Override
     public URL getUrl(String key) {
         try {
-            String urlString = minioClient.getPresignedObjectUrl(
+            // Step 1: Generate the pre-signed URL. It may contain an incorrect internal base URL.
+            String internalUrlString = minioClient.getPresignedObjectUrl(
                     GetPresignedObjectUrlArgs.builder()
                             .method(Method.GET)
                             .bucket(bucketName)
@@ -138,30 +198,42 @@ public class MinioStorageService implements IFileStorageService {
                             .expiry(7, TimeUnit.DAYS)
                             .build()
             );
-            // Use the modern, non-deprecated way to create a URL
-            return new URI(urlString).toURL();
+
+            // Step 2: Manually replace the incorrect internal base with the correct public one.
+            URL internalUrl = new URL(internalUrlString);
+            String correctUrlString = this.minioPublicUrl + internalUrl.getPath() + "?" + internalUrl.getQuery();
+
+            // Step 3: Return the corrected, browser-friendly URL.
+            return new URI(correctUrlString).toURL();
+
         } catch (Exception e) {
-            throw new RuntimeException("Error getting pre-signed URL from MinIO", e);
+            throw new RuntimeException("Error getting or correcting pre-signed URL from MinIO", e);
         }
     }
 
+    // --- Stats Methods ---
+
+    /**
+     * Calculates statistics for the entire MinIO bucket, including total file count and size.
+     * <strong>Warning:</strong> This method lists all objects in the bucket and can be very
+     * slow and resource-intensive on large buckets.
+     *
+     * @return A {@link Map} containing 'totalFileCount' and 'totalSizeFormatted'.
+     * @throws RuntimeException if communication with MinIO fails.
+     */
     public Map<String, Object> getStats() {
         log.warn("PERFORMANCE WARNING: Calculating stats on MinIO requires listing all objects, which can be slow.");
         Map<String, Object> stats = new HashMap<>();
         long totalFileCount = 0;
         long totalSizeInBytes = 0;
-
         try {
-            Iterable<Result<Item>> results = minioClient.listObjects(
-                    ListObjectsArgs.builder().bucket(bucketName).recursive(true).build()
-            );
+            Iterable<Result<Item>> results = minioClient.listObjects(ListObjectsArgs.builder().bucket(bucketName).recursive(true).build());
             for (Result<Item> result : results) {
                 Item item = result.get();
                 totalFileCount++;
                 totalSizeInBytes += item.size();
             }
         } catch (Exception e) {
-            log.error("Failed to calculate stats from MinIO", e);
             throw new RuntimeException("Could not get stats from MinIO", e);
         }
         stats.put("totalFileCount", totalFileCount);
@@ -169,17 +241,21 @@ public class MinioStorageService implements IFileStorageService {
         return stats;
     }
 
+    /**
+     * Calculates the total storage usage for a predefined set of folders (prefixes).
+     * <strong>Warning:</strong> This method performs a separate listing operation for each folder
+     * and can be slow if folders contain many objects.
+     *
+     * @return A {@link Map} where keys are folder names and values are their total size in bytes.
+     */
     public Map<String, Long> getUsagePerFolder() {
         log.warn("PERFORMANCE WARNING: Calculating usage per folder on MinIO requires listing objects, which can be slow.");
         Map<String, Long> usageMap = new HashMap<>();
         List<String> foldersToScan = List.of("cars", "selfies", "docs");
-
         for (String folder : foldersToScan) {
             long folderSize = 0;
             try {
-                Iterable<Result<Item>> results = minioClient.listObjects(
-                        ListObjectsArgs.builder().bucket(bucketName).prefix(folder + "/").recursive(true).build()
-                );
+                Iterable<Result<Item>> results = minioClient.listObjects(ListObjectsArgs.builder().bucket(bucketName).prefix(folder + "/").recursive(true).build());
                 for (Result<Item> result : results) {
                     folderSize += result.get().size();
                 }
@@ -191,6 +267,12 @@ public class MinioStorageService implements IFileStorageService {
         return usageMap;
     }
 
+    /**
+     * Formats a size in bytes into a human-readable string (e.g., "1.5 MB").
+     *
+     * @param size The size in bytes.
+     * @return A formatted string representation of the size.
+     */
     private String formatSize(long size) {
         if (size <= 0) return "0 B";
         final String[] units = new String[]{"B", "KB", "MB", "GB", "TB"};
